--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loader</title>
+    <title>cv maker</title>
   </head>
   <body>
     <h1>RULES</h1>
