--- a/Cv.html
+++ b/Cv.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cv.css" />
+    <link rel="stylesheet" href="Cv.css" />
     <title>My CV</title>
   </head>
   <body>
