--- a/Cv.html
+++ b/Cv.html
@@ -13,7 +13,7 @@
       </div>
     <span class="float">
     <div class="left">
-      <img src="nauman.jpg" alt="my pic" id="display_image"/>
+      <img src="Nauman.jpg" alt="my pic" id="display_image"/>
       <h3>Contacts</h3>
       <hr />
       <h4>Phone</h4>
